force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Default_Rendered__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Default_Rendered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if the section is rendered by default.</description>
    <label>Default Rendered</label>
    <type>Checkbox</type>
</CustomField>