force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Display_Toggle_Effect__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Display_Toggle_Effect__c</fullName>
    <label>Display Toggle Effect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fade</fullName>
            </value>
            <value>
                <fullName>slide</fullName>
                <default>true</default>
                <label>slide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>