force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Display_Toggle_Header__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Display_Toggle_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When Selected is allows the Header to be clicked to expand the section</description>
    <label>Display Toggle Header</label>
    <type>Checkbox</type>
</CustomField>