force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Display_Toggle_Link__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Display_Toggle_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Selected it allows the show/hide link to appear to the right and once clicked it will expand the section.</description>
    <label>Display Toggle Link</label>
    <type>Checkbox</type>
</CustomField>