force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Inactive__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the screen section is inactive it will not be displayed or copied when cloning the Screen.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>