force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Is_Editable__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Is_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>