force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Rendered_View__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Rendered_View__c</fullName>
    <description>Contains HTML rendered view of the screen section with the latest values from the last time the screen section was loaded.</description>
    <label>Rendered View</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>