force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Screen__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Screen__c</fullName>
    <label>Screen</label>
    <referenceTo>nDESIGN__Screen__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>