force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__Screen_View__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Screen_View__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Screen View</label>
    <referenceTo>nDESIGN__View__c</referenceTo>
    <relationshipLabel>Screen Sections</relationshipLabel>
    <relationshipName>Screen_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>