force-app/main/default/objects/nDESIGN__Screen_Section__c/fields/nDESIGN__sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__sObject_Type__c</fullName>
    <inlineHelpText>Select The Object the Credit Memo is From.</inlineHelpText>
    <label>sObject Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Loan__c</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Product_Package__c</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Review__c</fullName>
            </value>
            <value>
                <fullName>LLC_BI__Treasury_Service__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>